# Covid-19-test-system

./: Assignment.cpp  Assignment.h  CMakeLists.txt
